fix: labs alignment

--- a/static/css/style.blue.css
+++ b/static/css/style.blue.css
@@ -1250,12 +1250,10 @@ fieldset[disabled] .btn-template-primary.active {
   -webkit-filter: none;
 }
 
-
 .narrow-labs {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-right: 0;
-  padding-bottom: 20px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 16px;
 }
 
 .labs {
